--- a/views/pages/employee/guestCheckinList.hbs
+++ b/views/pages/employee/guestCheckinList.hbs
@@ -4,46 +4,7 @@
        
         {{> _search searchOptionsList=searchOptionsList searchControlUrl=searchControlUrl placeholder="Search for Guests Checking in Today"}}
         
-        <div class="reservation-results-view-container">
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th scope="col">Reservation #</th>
-                        <th scope="col">Check-in</th>
-                        <th scope="col">Check-out</th>
-                        <th scope="col">Guest Name</th>
-                        <th scope="col">Status</th>
-                        <th scope="col">Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">ASD75HK</th>
-                        <td>Sep 7, 2024 Fri</td>
-                        <td>Sep 10, 2024 Tuesday</td>
-                        <td>Biles, Gray</td>
-                        <td>Upcoming</td>
-                        <td>Modify</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">DF4HTS</th>
-                        <td>Sep 7, 2024 Fri</td>
-                        <td>Sep 10, 2024 Tuesday</td>
-                        <td>Biles, Gray</td>
-                        <td>Upcoming</td>
-                        <td>View</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">SDF4HN</th>
-                        <td>Sep 7, 2024 Fri</td>
-                        <td>Sep 10, 2024 Tuesday</td>
-                        <td>Biles, Gray</td>
-                        <td>Upcoming</td>
-                        <td>Modify</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+        {{> _tableDisplay tableOptions=tableOptions results=results}}
     </div>
 </div>
 <script>
