--- a/views/pages/employee/viewReservations.hbs
+++ b/views/pages/employee/viewReservations.hbs
@@ -2,48 +2,9 @@
     <div class="view-reservation-page-wrapper">
         {{> _h1styled headerTitle="Find a Reservation"}}
 
-        {{> _search searchOptionsList=searchOptionsList searchControlUrl=searchControlUrl placeholder="Search for a Reservation"}}
+        {{> _search searchOptionsList=searchOptionsList searchControlUrl=searchControlUrl placeholder="Search for a Reservation" }}
         
-        <div class="reservation-results-view-container">
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th scope="col">Reservation #</th>
-                        <th scope="col">Check-in</th>
-                        <th scope="col">Check-out</th>
-                        <th scope="col">Guest Name</th>
-                        <th scope="col">Status</th>
-                        <th scope="col">Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">ASD75HK</th>
-                        <td>Sep 7, 2024 Fri</td>
-                        <td>Sep 10, 2024 Tuesday</td>
-                        <td>Biles, Gray</td>
-                        <td>Upcoming</td>
-                        <td>Modify</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">DF4HTS</th>
-                        <td>Sep 7, 2024 Fri</td>
-                        <td>Sep 10, 2024 Tuesday</td>
-                        <td>Biles, Gray</td>
-                        <td>Upcoming</td>
-                        <td>View</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">SDF4HN</th>
-                        <td>Sep 7, 2024 Fri</td>
-                        <td>Sep 10, 2024 Tuesday</td>
-                        <td>Biles, Gray</td>
-                        <td>Upcoming</td>
-                        <td>Modify</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+        {{> _tableDisplay tableOptions=tableOptions results=results}}
     </div>
 </div>
 <script>
