--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -50,20 +50,20 @@
         <li>[DONE, TESTED & REVIEWED]<a href="/portal"> Employee Online Portal</a></li>
         <li>[DONE, TESTED & REVIEWED]<a href="/dashboard/staff/65dfe87201b6131436544414"> Hotel Staff Account Page</a></li>
         <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/staff/viewReservations">Hotel Staff View Reservations List</a></li>
-        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/staff/checkin"> Hotel Staff View Guests Checking In</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript popup)]</span><a href="/dashboard/staff/checkin"> Hotel Staff View Guests Checking In</a></li>
         <li><span style="color:red">[pending]</span><a href="/dashboard/staff/inquiries"> Hotel Staff Inquiries Page</a></li>
         <li><span style="color:red">[pending]</span><a href="/dashboard/staff/createReservations"> Hotel Staff Create Reservations Page</a></li>
-        <li><span style="color:red">[pending]</span><a href=""> Manager View List Offers Page (Buttons: Add, Edit, Delete)</a></li>
-        <li><span style="color:red">[pending]</span><a href=""> Manager View List Promotions Page (Buttons: Add, Edit, Delete)</a></li>
-        <li><span style="color:red">[pending]</span><a href=""> Manager View List Rooms Page (Buttons: Add, Edit, Delete)</a></li>
-        <li><span style="color:red">[pending]</span><a href=""> Admin View List User Accounts Page (Buttons: Add, Edit, Delete, manage permissions)</a></li>
+        <li><span style="color:red">[pending]</span><a href="/dashboard/manager/offers"> Manager View List Offers Page (Buttons: Add, Edit, Delete)</a></li>
+        <li><span style="color:red">[pending]</span><a href="/dashboard/manager/promotions"> Manager View List Promotions Page (Buttons: Add, Edit, Delete)</a></li>
+        <li><span style="color:red">[pending]</span><a href="/dashboard/manager/rooms"> Manager View List Rooms Page (Buttons: Add, Edit, Delete)</a></li>
+        <li><span style="color:red">[pending]</span><a href="/dashboard/USNVMQD493/users"> Admin View List User Accounts Page (Buttons: Add, Edit, Delete, manage permissions)</a></li>
         <div style="display:none">
-            <li><a href=""> Manager Dashboard Page</a></li>
+            <li><a href="/dashboard/manager"> Manager Dashboard Page</a></li>
             <li><a href=""> Manager View/Edit Single Offer Page</a></li>
             <li><a href=""> Manager View/Edit Single Offer Promotion Page</a></li>
             <li><a href=""> Manager View/Edit Single Offer Room Page</a></li>
             <li><a href=""> Manager Generate Report Page</a></li>
-            <li><a href=""> Admin Dashboard Page</a></li>
+            <li><a href="/dashboard/USNVMQD493/ssdas"> Admin Dashboard Page</a></li>
             <li><a href=""> Admin View/Edit User Account Accounts Page</a></li>
             <li><a href=""> Admin Manage Permissions Accounts Page</a></li>
         </div>
