--- a/views/pages/hotelguest/userdashboard.hbs
+++ b/views/pages/hotelguest/userdashboard.hbs
@@ -1,37 +1,215 @@
-<div class="container">
+<style>
+  @import url(https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css);
+  @import url(https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css);
+
+  .profile-card {
+    background-color: #ffecc8;
+    padding: 20px;
+    text-align:
+      center;
+  }
+
+  .profile-pic {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    margin: 0 auto;
+    overflow: hidden;
+  }
+
+  .social-links ul {
+    padding: 0;
+    margin:
+      0;
+  }
+
+  .social-links ul li {
+    list-style: none;
+    display: inline-block;
+    margin: 2px 0;
+    font-size: 20px;
+  }
+
+  .social-links ul li a {
+    color: #333;
+    padding: 2px 6px;
+    border-radius: 5px;
+    transition: 0.5s;
+  }
+
+  .social-links ul li:hover a {
+    background-color: #333333;
+    color: #fff;
+    transition: 0.5s;
+  }
+
+  .custom-button {
+    background-color: #FFA500;
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    height: 200px;
+    width: 200px;
+  }
+
+  .custom-button:hover {
+    background-color: #FF8C00;
+  }
+
+  .slick-next {
+    right:  8px;
+  }
+
+  .slick-prev {
+    left: 0px;
+    z-index: 1;
+  }
+
+  .slick-item {
+    position: relative;
+
+  }
+
+  .absolute-text {
+    position: absolute;
+    bottom: -16px;
+    width: 100%;
+    background-color: #f5e3e38f;
+    width: 100%;
+    padding: 5px;   
+  }
+
+  .slick-slider div {
+    margin-right: 3px;
+  }
+
+  .slick-slider div img {
+    width: 100%;
+  }
+</style>
+
+<div class="container mt-5 mb-5">
   <div class="row">
+    <!-- User Profile Section -->
     <div class="col-md-4">
-      <img src="https://via.placeholder.com/150" alt="Profile Picture" class="img-thumbnail">
-      <button class="btn btn-primary mt-3">Update Photo</button>
+      <div class="profile-card">
+        <img src="../../../assets/images/me.jpeg" alt="Profile Picture" class="img-thumbnail profile-pic" />
+        <h5 class="mt-5">John Doe</h5>
+        <p>Hotel Guest</p>
+        <ul class="list-group-flush">
+          <li class="list-group-item">johndoe@gmail.com</li>
+          <li class="list-group-item">Email Confirmed</li>
+          <li class="list-group-item">Address<br />City, Postal Code,
+            Country</li>
+          <li class="list-group-item">499-999-9999</li>
+        </ul>
+        <a href="#">Update Email</a><br />
+        <a href="#">Change Password</a>
+      </div>
     </div>
     <div class="col-md-8">
-      <h2>John Doe</h2>
-      <p>Joined in 2021</p>
-      <hr>
-      <h3>Your Upcoming Reservations</h3>
       <div class="row">
-        <div class="col-md-6">
-          <h4>Deluxe Room</h4>
-          <p>Jan 28, 2024 - Jan 30, 2024</p>
+        <div class="col-md-8">
+          <div>
+            <p class="fs-5"><strong>Hello, John Doe</strong></p>
+            <p>Joined in 2021</p>
+            <div class="btn">
+              <button type="button" class="btn btn-outline-primary">Edit Profile</button>
+            </div>
+          </div>
         </div>
-        <div class="col-md-6">
-          <h4>Double Room</h4>
-          <p>Mar 12, 2024 - March 13, 2024</p>
+        <div class="col-md-4">
+          <p class="fs-5">You earned <br><strong class="fs-3">100 points</strong></p>
+          <p class="fs-7">Unlock your rewards! Book now and redeem your points</p>
+          <a href="">View points history</a>
         </div>
       </div>
-      <hr>
-      <h3>Your Points</h3>
-      <p>You earned 100 points</p>
-      <button class="btn btn-primary">Unlock Your Rewards! Book Now and Redeem Your Points!</button>
-      <button class="btn btn-primary">View Points History</button>
+      <div class="">
+
+
+
+        <section class="autoplay slider slick-slider">
+          <div>
+            <div class="slick-item">
+              <img src="../../../assets/images/room1.jpg">
+              <p class="absolute-text"> In 1 month</p>
+            </div>
+            <div>
+              <h5>Room Name</h5>
+              <p>Jan 28 2024 - jan 30 2024</p>
+            </div>
+          </div>
+          <div>
+            <div class="slick-item">
+              <img src="../../../assets/images/room1.jpg">
+              <p class="absolute-text"> In 1 month</p>
+            </div>
+            <div>
+              <h5>Room Name</h5>
+              <p>Jan 28 2024 - jan 30 2024</p>
+            </div>
+          </div>
+          <div>
+            <div class="slick-item">
+              <img src="../../../assets/images/room1.jpg">
+              <p class="absolute-text"> In 1 month</p>
+            </div>
+            <div>
+              <h5>Room Name</h5>
+              <p>Jan 28 2024 - jan 30 2024</p>
+            </div>
+          </div>
+          <div>
+            <div class="slick-item">
+              <img src="../../../assets/images/room1.jpg">
+              <p class="absolute-text"> In 1 month</p>
+            </div>
+            <div>
+              <h5>Room Name</h5>
+              <p>Jan 28 2024 - jan 30 2024</p>
+            </div>
+          </div>
+
+        </section>
+        <div>
+          <p><strong class="fs-5">What would you like to do today?</strong></p>
+        </div>
+        <div class="d-flex">
+          <div class="p-3">
+            <button class="btn btn-block btn-warning custom-button">View Reservation History</button>
+          </div>
+          <div class="p-3">
+            <button class="btn btn-block btn-purple custom-button" style="background-color: #c779d0;">Browse
+              Rooms</button>
+          </div>
+          <div class="p-3">
+            <button class="btn btn-block btn-info custom-button" style="background-color: #4bc0c8;">View
+              Inquiries</button>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
-  <div class="row mt-3">
-    <div class="col-md-4">
-      <h3>Inquiries</h3>
-    </div>
-    <div class="col-md-8">
-      <button class="btn btn-primary">View Inquiries</button>
-    </div>
-  </div>
+
+
 </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"
+  integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"
+  integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A=="
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<Script>
+  $('.autoplay').slick({
+    slidesToShow: 3,
+    slidesToScroll: 1,
+    autoplay: true,
+    dots: true,
+    autoplaySpeed: 2000,
+  });
+</script>
