--- a/views/pages/hotelguest/royaltyHistory.hbs
+++ b/views/pages/hotelguest/royaltyHistory.hbs
@@ -1,4 +1,4 @@
-<div>
+<div class="py-5">
     <div class="container content-contain">
         <div class="row">
             <!-- User Profile Section -->
@@ -15,10 +15,23 @@
             </div>
             <div class="col-md-8 form-content ">
                 <div class="px-3">
-                    <div class="w-auto">
-                        <strong class="fs-1 ">Edit Account</strong>
-                        <hr class="mx-auto" style="border-color: #e45c31;">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="w-auto">
+                                <strong class="fs-1 ">Hello, John Doe</strong>
+                                <h1>History</h1>
+                                <hr class="mx-auto" style="border-color: #e45c31;">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div style="color: #e45c31;">
+                                <p>You earned</p>
+                                <p><span class="Points">1,200</span> points</p>
+                                <p> Unlock Your Rewards! Book now and redeem your points.</p> 
+                            </div>
+                        </div>
                     </div>
+
 
                     <form>
                         <div class="row g-3">
