--- a/views/pages/public/home.hbs
+++ b/views/pages/public/home.hbs
@@ -1,42 +1,233 @@
-<main>
-	<div class="container">
+<style>
+	.hero-section {
+		width: 100%;
+		height: 500px;
+		background-image: url(../../img/about/Hotel.png);
+		background-repeat: no-repeat;
+		background-size: cover;
+		position: relative;
+	}
 
-		<!-- Start your code here -->
-		<h1>Hotel Website Home page</h1>
-		<section class="lazy slider" data-sizes="50vw">
-			<div>
-				<img data-lazy="http://placehold.it/350x300?text=1-350w"
-					data-srcset="http://placehold.it/650x300?text=1-650w 650w, http://placehold.it/960x300?text=1-960w 960w"
-					data-sizes="100vw">
-			</div>
-			<div>
-				<img data-lazy="http://placehold.it/350x300?text=2-350w"
-					data-srcset="http://placehold.it/650x300?text=2-650w 650w, http://placehold.it/960x300?text=2-960w 960w"
-					data-sizes="100vw">
-			</div>
-			<div>
-				<img data-lazy="http://placehold.it/350x300?text=3-350w"
-					data-srcset="http://placehold.it/650x300?text=3-650w 650w, http://placehold.it/960x300?text=3-960w 960w"
-					data-sizes="100vw">
-			</div>
-			<div>
-				<img data-lazy="http://placehold.it/350x300?text=4-350w"
-					data-srcset="http://placehold.it/650x300?text=4-650w 650w, http://placehold.it/960x300?text=4-960w 960w"
-					data-sizes="100vw">
-			</div>
-			<div>
-				<img data-lazy="http://placehold.it/350x300?text=5-350w"
-					data-srcset="http://placehold.it/650x300?text=5-650w 650w, http://placehold.it/960x300?text=5-960w 960w"
-					data-sizes="100vw">
-			</div>
-			<div>
-				<!-- this slide should inherit the sizes attr from the parent slider -->
-				<img data-lazy="http://placehold.it/350x300?text=6-350w"
-					data-srcset="http://placehold.it/650x300?text=6-650w 650w, http://placehold.it/960x300?text=6-960w 960w">
-			</div>
-		</section>
+	.hero-absolute {
+		position: absolute;
+		top: 50%;
+		width: 100%;
+		transform: translate(0%, -50%);
+	}
 
-		<div class="box-shadow" style="height: 400px; width:400px; border:1px solid black;"></div>
+	.hero-text-container {
+		width: 100%;
+		text-align: center;
+		background-color: rgb(238 236 236 / 50%);
+		padding: 5px;
+	}
+
+	.hero-text {
+		font-size: 50px;
+		font-weight: 800;
+
+	}
+
+	.underline {
+		width: 100px;
+		border: 2px solid rgba(254, 172, 94, 1);
+	}
+
+	.calendar-container {
+		display: flex;
+		justify-content: center;
+		border-radius: 20px;
+		align-items: center;
+		align-self: center;
+		text-align: center;
+	}
+
+	.calendar-container-inner {
+		display: flex;
+		background: white;
+		border-radius: 50px;
+		justify-content: center;
+		align-items: center;
+		padding: 5px;
+	}
+
+	.calendar-container-inner div {
+		padding: 5px;
+		background-color: white;
+		border-radius: 20px;
+		padding: 0px 15px;
+	}
+
+	.right-border {
+		position: relative;
+	}
+
+	.right-border::before {
+		content: '';
+		position: absolute;
+		top: 25%;
+		bottom: 0;
+		right: 0;
+		border-left: 1px solid black;
+		background-color: black;
+		height: 50%;
+	}
+
+	.material-symbols-outlined {
+		padding: 10px;
+		background-color: rgba(254, 172, 94, 1);
+		border-radius: 100%;
+		padding: 10px;
+	}
+
+	.home-about {
+		padding: 30px 0;
+	}
+
+	.home-about h1 {
+		color: rgba(51, 57, 79, 1);
+		font-weight: 800;
+		font-size: 30px;
+	}
+
+	.home-about a {
+		text-decoration: none;
+		color: rgba(116, 157, 175, 1);
+		margin-right: 30px;
+	}
+
+	.hm-btn {
+		padding: 10px 30px;
+		border-radius: 20px;
+		background-color: rgba(254, 172, 94, 1);
+		border: none;
+		color: white;
+		margin-top: 30px;
+	}
+
+	.hm-btn:hover {
+		background-color: white;
+		border: 1px solid rgba(254, 172, 94, 1);
+		color: rgba(254, 172, 94, 1);
+		transition: 0.3s;
+	}
+
+	.about-text {
+		color: rgba(107, 101, 101, 1);
+		width: 70%;
+		margin-top: 30px;
+		text-align: justify;
+	}
+
+	.home-restaurant {
+		background-image: url(../../img/about/Hotel.png);
+	}
+
+	.home-restaurant-inner {
+		background: linear-gradient(to right, #ffffffbf, #f6f6f642);
+		background-repeat: no-repeat;
+		background-size: 100%;
+		background-color: rgba(0, 0, 0, 0.61);
+	}
+
+	.restaurent-text {
+		color: rgba(51, 57, 79, 1);
+		width: 70%;
+		margin-top: 30px;
+		font-weight: 700;
+		text-align: justify;
+		text-style: italic;
+	}
+
+	.restaurent-btn {
+		padding: 10px 30px;
+		border-radius: 20px;
+		background-color: rgba(51, 57, 79, 1);
+		border: none;
+		color: white;
+		margin-top: 30px;
+	}
+
+	.restaurent-btn:hover {
+		background-color: white;
+		border: 1px solid rgba(51, 57, 79, 1);
+		color: rgba(51, 57, 79, 1);
+		transition: 0.3s;
+	}
+
+	.abt-img {
+		width: 100%;
+		height: auto;
+	}
+</style>
+
+<!-- Start your code here -->
+<div class=" mb-5">
+	<div class="hero-section">
+		<div class="hero-absolute">
+			<div class="hero-text-container">
+				<h1 class="hero-text">Welcome Home, Traveller</h1>
+			</div>
+			<div class="calendar-container">
+				<div class="calendar-container-inner">
+					<div class="right-border">
+						<p><span>Check In</span><br><span>Feb 23, 2024</span></p>
+					</div>
+					<div class="right-border">
+						<p><span>Check Out</span><br><span>Feb 25, 2024</span></p>
+					</div>
+					<div class="right-border">
+						<p><span>Guests</span><br><span>5</span></p>
+					</div>
+					<div class="right-border">
+						<p><span>Rooms</span> <br>
+							<span>2</span>
+						</p>
+					</div>
+					<div>
+						<div class="search-container">
+							<span class="material-symbols-outlined">
+								search
+							</span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="container home-about">
+		<div class="row">
+			<div class="col-md-8">
+				<h1>
+					Discover More About the <br> Hotel
+				</h1>
+				<div class="underline"></div>
+				<p class="about-text">Discover the essence of luxury and tranquility at Hotel California, a haven where
+					elegance meets unparalleled service. Nestled in a serene paradise, every detail of your stay is
+					crafted to ensure a magical experience. Join us for an unforgettable escape where every moment
+					becomes a cherished memory.</p>
+				<div class="d-flex ">
+					<a href="#"> Ask a Question</a>
+					<a href="#"> Find a Room</a>
+				</div>
+				<button class="hm-btn">Discover More</button>
+			</div>
+			<div class="col-md-4 d-none d-md-block">
+				<img class="abt-img" src="../../../img/placeholder/hotelstaff.png" alt="" srcset="">
+			</div>
+		</div>
+	</div>
+
+	<div class="home-restaurant container p-0">
+		<div class="home-restaurant-inner container py-5">
+			<h1>Try Our <br> Restaurent</h1>
+			<p class="restaurent-text"><i></i> Savor the exquisite flavors and breathtaking ambiance at Port's, <br>
+				where every
+				meal turns into a memorable
+				culinary journey </i></p>
+			<button class="restaurent-btn">Eat at Porto</button>
+		</div>
 	</div>
 
 	<script type="text/javascript">
@@ -49,11 +240,11 @@
 				slidesToScroll: 2
 			});
 			$(".lazy").slick({
-				lazyLoad: 'ondemand', // ondemand progressive anticipated
+				lazyLoad: 'ondemand',
 				dots: true,
 				infinite: true
 			});
 		});
 	</script>
 	<!-- End your code here  -->
-</main>
+</div>
