--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -11,10 +11,10 @@
     <h4>Nischal</h4>
     <ul>
         <li><span style="color:green">[TO REVIEW & TEST]</span> Header & Footer [done - minor/less adjustments needed ]</li>
-        <li><span style="color:red">[pending]</span><a href="/home"> Landings Page </a></li>
-        <li><span style="color:red">[pending]</span><a href="/reservations"> Guest Confirmed Reservations Page</a></li>
-        <li><span style="color:red">[pending]</span><a href="/loyalty"> Guest Loyalty History Page </a></li>
-        <li><span style="color:red">[pending]</span><a href="/editaccount"> Guest Edit Account Page </a></li>
+        <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/home"> Landings Page </a></li>
+        <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/reservations"> Guest Confirmed Reservations Page</a></li>
+        <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/loyaltyhistory"> Guest Loyalty History Page </a></li>
+        <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/editaccount"> Guest Edit Account Page </a></li>
     </ul>
 
     <h4>Taslima</h4>
