added employee login and authentication

--- a/views/partials/employee/_emploginform.hbs
+++ b/views/partials/employee/_emploginform.hbs
@@ -4,17 +4,19 @@
 <p>
     {{desc2}}
 </p>
-<form action="auth/login/staff" method="post">
+{{!-- <form action="{{#equal type "Employee"}}api/v1/employees/login{{/equal}}" method="post" name="{{type}}Login" id="{{type}}Login"> --}}
+<form name="{{type}}Login" id="{{type}}LoginForm">
     <div class="form-group">
-        <label for="exampleInputEmail1">{{type}} email</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        <label for="{{type}}Email">{{type}} email</label>
+        <input type="email" name="email" class="form-control" id="{{type}}Email" aria-describedby="emailHelp" placeholder="Enter email">
     </div>
     <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <label for="{{type}}Password">Password</label>
+        <input type="password" name="password"  class="form-control" id="{{type}}Password" placeholder="Password">
     </div>
     <div class="portal-forgot-pass-div">
         <a href="/portal?forgot">Forgot your password?</a>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    {{!-- <button type="submit" class="btn btn-primary">Submit</button> --}}
+    <button id="{{type}}Submit" type="button" class="btn btn-primary">Submit</button>
 </form>
