--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -23,7 +23,7 @@
         <li>[DONE, TESTED & REVIEWED]<a href="/contactUs">Contact Us [minor adjustments]</a></li>
         <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/update-email">Update Email [done - minor adjustments]</a></li>
         <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/view-inquiries">View Inquiries [done - minor adjustments]</a></li>
-        <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/">Room Results [done - needs uploading]</a></li>
+        <li><span style="color:green">[TO REVIEW & TEST]</span><a href="/roomOffers">Room Results [done - needs uploading]</a></li>
     </ul>
 
     <h4>Marvie</h4>
@@ -36,15 +36,15 @@
             <li><a href=""> Guest Edit Account</a></li>
         </div>
         <li>Static pages</li>
-        <li><span style="color:red">[pending]</span><a href="/restaurant">Restaurant Page</a></li>
-        <li><span style="color:red">[pending]</span><a href="">Hotel Faqs & Policies</a></li>
+        <li><span style="color:orange">[InProgress]</span><a href="/restaurant">Restaurant Page</a></li>
+        <li><span style="color:orange">[InProgress]</span><a href="/faqsPolicies">Hotel Faqs & Policies</a></li>
         <li>Other pages</li>
         <li><span style="color:red">[pending]</span><a href="">Forgot Password</a></li>
         <li><span style="color:red">[pending]</span><a href="">Forgot Password Verify</a></li>
         <li>[DONE, TESTED & REVIEWED]<a href="/verifyaccount"> Verify Acc Via Create Acc </a></li>
         <li>[DONE, TESTED & REVIEWED]<a href="/checkout/createaccount"> Create Account via Checkout</a></li>
         <li>[DONE, TESTED & REVIEWED]<a href="/checkout/verifyaccount"> Verify Account via Checkout</a></li>
-        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/checkout/reservationinfo"> Checkout Reservation Details</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/reservationinfo/:id"> Checkout Reservation Details</a></li>
         <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/reservationinfo/adssadsa"> User Reservation Details</a></li>
         <li>Hotel Staff pages</li>
         <li>[DONE, TESTED & REVIEWED]<a href="/portal"> Employee Online Portal</a></li>
